--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.2",
+    "iview": "^3.5.4",
+    "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
+    "view-design": "^4.6.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -30,6 +33,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.13.3",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
