初步使用async和await函数

--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.2",
-    "iview": "^3.5.4",
-    "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.1",
-    "view-design": "^4.6.1",
+    "vant": "^2.12.24",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
