--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.1.2",
     "element-ui": "^2.15.2",
+    "howler": "^2.2.3",
     "normalize.css": "^8.0.1",
     "vant": "^2.12.24",
     "vue": "^2.6.11",
